# virt-council-assistant

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: __init__.py  main.py  use_cases.py
app/adapters/: base_repositories.py  mongodb_storage.py  storage.py  telegram.py
app/adapters/llm/: __init__.py  prompts.py  provider.py
app/domain/: entities.py  repositories.py  value_objects.py
app/infrastructure/: config.py
app/infrastructure/database/: __init__.py  models.py  mongodb.py  session.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  USAGE_FLOW.md
examples/: manage_projects.py  mongodb_demo.py
tests/: conftest.py
tests/unit/: test_config.py  test_create_project_use_case.py  test_entities.py  test_mongodb_repositories.py  test_value_objects.py
